--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@
 
 .swiper {
     width: 100%;
-    height: 88vh;
+    height: 85vh;
   }
 
 .swiper-slide {
@@ -101,3 +101,97 @@
     display: block;
     width: 100%;
   }
+
+.dark{
+  background-color: rgba(0, 0, 0, 0.418);
+}
+
+.herotxt{
+  position: relative;
+  top: 38%;
+  left: 18%;
+}
+
+.heroh4{
+  font-size: 36px;
+  font-weight: 600;
+}
+
+.heroh3{
+  font-size: 52px;
+  font-weight: 600;
+}
+
+.herop{
+  font-size: 15px;
+  font-weight: 400;
+}
+
+.s2 h1{
+  font-size: 52px;
+  font-weight: 600;
+}
+
+.s2 p{
+  font-size: 20px;
+}
+
+.s2btn1{
+  width: 100px;
+  transition: all .3s ease;
+  background-color: black;
+
+}
+
+.s2btn2{
+  width: 100px;
+  transition: all .5s ease;
+  color: black;
+  background-color: white;
+}
+
+.s2btn1:hover{
+  background-color: white;
+  color: black;
+  transition: all .3s ease;
+}
+
+.s2btn2:hover{
+  background-color: black;
+  color: white;
+  transition: all .5s ease;
+}
+
+
+
+.swpbtn1{
+  border: 2px solid rgb(238, 231, 231);
+  size: 10px;
+  padding: 30px;
+  border-radius: 50%;
+  right: 5%;
+}
+
+.swpbtn2{
+  border: 2px solid rgb(224, 215, 215);
+  size: 10px;
+  padding: 30px;
+  border-radius: 50%;
+  left: 5%;
+}
+
+.s3 h1{
+  font-size: 42px;
+  font-weight: 600;
+}
+
+.s3 p{
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.s3img{
+ width: 80%;
+}
+
+
