--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@
   --swiper-pagination-color:#e74c3c;
 }
 
-.swp1{
+.swp1 {
   width: 100%;
     height: 85vh;
     border-radius: 0 0 20px 20px;
@@ -810,9 +810,10 @@ a.google span {
 .abs4line{
   background-image: url(../images/bgimg/linebg.svg);
   width: 100%;
-  height: 200px;
+  height: 500px;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
 
 
