--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,11 @@
   backdrop-filter: blur(5px);
 }
 
+.navbar2{
+  display: none;
+  background-color: rgba(255, 255, 255, 0.829);
+  backdrop-filter: blur(5px);
+}
 
 
 
@@ -810,10 +815,10 @@ a.google span {
 .abs4line{
   background-image: url(../images/bgimg/linebg.svg);
   width: 100%;
-  height: 500px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  height: 200px;
 }
 
 
