--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 *{
     margin: 0;
     padding: 0;
+    /* border: 2px solid red; */
 }
 
 .font{
@@ -203,12 +204,12 @@
 }
 
 .s2 h1 ,.abs2  h1, .header h1 , .abs4 h1{
-  font-size: clamp(25px,7vw,52px);
+  font-size: clamp(30px,7vw,52px);
   font-weight: 600;
 }
 
 .s2 p , .abs2p, .abs4 p {
-  font-size: clamp(8px,4vw,20px)
+  font-size: clamp(18px,4vw,20px)
 }
 
 .s2btn1{
@@ -491,7 +492,7 @@
 }
 
 .containerr {
-  height: 67vh;
+  height: 75vh;
   width: 100%;
   display: flex;
   align-items: center;
@@ -503,6 +504,7 @@
   max-width: 430px;
   width: 100%;
   padding: 30px;
+  max-height: fit-content;
   border-radius: 6px;
   background: #FFF;
 }
@@ -659,8 +661,8 @@ a.google span {
 
 .abs1con{
   position: relative;
-  top: 200px;
-  left: 270px;
+  top: 37%;
+  left: 15%;
 }
 
 .abs1 .abs2 h1{
@@ -675,7 +677,7 @@ a.google span {
 
 .abs2s2{
   background-image: url(../images/bgimg/linebg.svg);
-  height: 550px;
+  
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -688,12 +690,16 @@ a.google span {
   background-color: #e76658;
 }
 
+.abs4btn{
+  max-width: 250px;
+}
+
 .abs2btn{
   border: 1px solid black;
   color: white;
   background-color: black;
   transition: all .3s ease;
-  width: 200px;
+  max-width: 200px;
 }
 .abs2btn:hover{
   transition: all .3s ease;
@@ -747,6 +753,7 @@ a.google span {
   margin: 0;
   padding: 0;
   border-radius: 15px;
+  
 }
 
 .section {
@@ -764,8 +771,6 @@ a.google span {
 }
 
 .features {
-  display: flex;
-  justify-content: space-around;
   margin-top: 40px;
 }
 
@@ -821,7 +826,47 @@ a.google span {
   height: 200px;
 }
 
+.agentcard{
+  height: 450px;
+}
 
+.agents{
+ 
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: 104%;
+  background-position:center;
+  border-radius: 10px;
+  height: 380px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.336);
+  transition: all 0.3s ease;
+}
+
+.agent1{
+  background-image: url(../images/bgimg/t10.jpg);
+}
+
+.agent2{
+  background-image: url(../images/bgimg/t9.jpg);
+}
+
+.agent3{
+  background-image: url(../images/bgimg/t8.jpg);
+}
+
+.agent4{
+  background-image: url(../images/bgimg/t7.jpg);
+}
+
+.agent5{
+  background-image: url(../images/bgimg/t5.jpg);
+}
+
+.agents:hover{
+  background-size: 110%;
+  
+  
+}
 
 @media screen and (max-width: 400px) {
   .form {
